--- a/Site/css/main.css
+++ b/Site/css/main.css
@@ -1,18 +1,24 @@
-@media all {    
+@media all {
     html { 
         background: url(../img/bg.jpg) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
         }
-    
-    header {
+   
+   header {
         display: block;
         }
-        
-    main {
+   
+   main {
         display: block;
         }
+   
+   body p {
+       font-family: sans-serif;
+       font-size: 15px;
+    }
+
     
     h1 {
         margin: 0px;
@@ -33,6 +39,12 @@
         margin: 0px;
         font-family: sans-serif;
         font-size: 15px;
+        }
+    
+    p.stafftitle {
+        margin: 0px;
+        font-family: sans-serif;
+        font-size: 12px;
         }
         
     a {
@@ -77,7 +89,6 @@
         margin: 25px 0px;
         padding: 0px;
         text-align: center;
-        opacity: 0.8;
         }
     
     #header {
@@ -89,6 +100,7 @@
         text-align: center;
         padding: 0px;
         background-color: #fff;
+        opacity: 0.8;
         }
         
     #mainmenu {
@@ -121,6 +133,7 @@
         padding-bottom: 25px;
         padding-left: 0px;
         background-color: #fff;
+        opacity: 0.8;
         }
         
     #article {
@@ -136,10 +149,25 @@
     #horizontal_line {
         width: 80%;
         height: 2px;
-        margin: 0px auto;
+        margin-top: 0px;
+        margin-left: auto;
+        margin-right: auto;
         text-align: center;
         background: #000000;
         overflow: hidden;
+        opacity: 1;
+        }
+        
+    #horizontal_line.flygplan {
+        width: 80%;
+        height: 2px;
+        margin-top: -192px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        background: #000000;
+        overflow: hidden;
+        opacity: 1;
         }
     
     #bodytext {
@@ -164,44 +192,354 @@
         padding-bottom: 5px;
         padding-left: 0px;
         background-color: #fff;
-        }  
+        opacity: 0.8;
+        }
+        
+    #footer.flygplan {
+        width: 80%;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+        padding-top: 10px;
+        padding-right: 0px;
+        padding-bottom: 5px;
+        padding-left: 0px;
+        background-color: #fff;
+        opacity: 0.8;
+        }
+        
+    /* Fleet image gallery */
+    #fleetimagecontainer.flygplan {
+        height:160px;
+        width:500px;
+        border: 1px solid black;
+        background-color:silver;
+        text-align:center;
+        padding-top:20px;
+        padding-bottom:10px;
+        margin-left:auto;
+        margin-right:auto;
+        position: relative;
+        top: -14em;
+        opacity: 1;
+        }
+
+    #fleetthumbs {
+        padding:0;
+        margin-top:10px;
+        margin-left: 78px;
+        }
+    
+    #fleetimage {
+        width: 400px;
+        height: 110px;
+        border:0;
+        } 
+
+    #fleetthumbs img {
+        width: 80px;
+        height:25px;
+        border:0;
+        }
+
+    #fleetthumbs a {
+        display: block;
+        float: left;
+        height:27px;
+        width: 82px;
+        padding: 3px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        text-decoration: none;
+        }
+
+    #fleetthumbs a:hover {
+        background-color:gray;
+        }
+
+    #fleetthumbs a:active, #fleetthumbs a:focus {
+        background-color:gray;
+        }
+    
+    /* Staff image gallery */
+    #staffimagecontainer.staff {
+        height:330px;
+        width:358px;
+        border: 1px solid black;
+        background-color:silver;
+        text-align:center;
+        padding-top:20px;
+        padding-bottom:10px;
+        margin-left:auto;
+        margin-right:auto;
+        position: relative;
+        top: -24em;
+        opacity: 1;
+        }
+
+    #staffthumbs {
+        padding:0;
+        margin-top:10px;
+        margin-left: 70px;
+        }
+    
+    #staffimage {
+        width: 258px;
+        height: 241px;
+        border:0;
+        } 
+
+    #staffthumbs img {
+        width: 45px;
+        height:48px;
+        border:0;
+        }
+
+    #staffthumbs a {
+        display: block;
+        float: left;
+        width: 47px;
+        height:50px;
+        padding: 3px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        text-decoration: none;
+        }
+
+    #staffthumbs a:hover {
+        background-color:gray;
+        }
+
+    #staffthumbs a:active, #staffthumbs a:focus {
+        background-color:gray;
+        }
+    
+    #horizontal_line.staff {
+        width: 80%;
+        height: 2px;
+        margin-top: -362px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        background: #000000;
+        overflow: hidden;
+        opacity: 1;
+        }
 }
 
 /* For display on a computer screen */
 /* Width > 1024 */
 @media screen and (min-width: 1025px) and (max-width: 2559px){
-    @viewport {
-        width: 960px;
-        }
 }
 
 /* Width > 480px AND < 1024px */
 @media screen and (min-width: 481px) and (max-width: 1024px){
-    @viewport {
-        width: 760px;
+    /* Fleet image gallery */
+    #fleetimagecontainer.flygplan {
+        height:142px;
+        width:380px;
+        border: 1px solid black;
+        background-color:silver;
+        text-align:center;
+        padding-top:20px;
+        padding-bottom:10px;
+        margin-left:auto;
+        margin-right:auto;
+        position: relative;
+        top: -14em;
+        opacity: 1;
+        }
+
+    #fleetthumbs {
+        padding:0;
+        margin-top:10px;
+        margin-left: 50px;
+        }
+    
+    #fleetimage {
+        width: 340px;
+        height: 94px;
+        border:0;
+        } 
+
+    #fleetthumbs img {
+        width: 61px;
+        height:20px;
+        border:0;
+        }
+
+    #fleetthumbs a {
+        display: block;
+        float: left;
+        width: 63px;
+        height:22px;
+        padding: 3px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        text-decoration: none;
+        }
+
+    #fleetthumbs a:hover {
+        background-color:gray;
+        }
+
+    #fleetthumbs a:active, #fleetthumbs a:focus {
+        background-color:gray;
         }
 }
 
 /* Width > 320px AND < 481px */
 @media screen and (min-width: 321px) and (max-width: 480px){
-    @viewport {
-        /*width: device-width;*/
-        width: 480px;
-        }
-        
     #mainlogo {
         width: 300px;
         height: 61px;
+        }
+        
+    /* Fleet image gallery */
+    #fleetimagecontainer.flygplan {
+        width:230px;        
+        height:115px;
+        border: 1px solid black;
+        background-color:silver;
+        text-align:center;
+        padding-top:20px;
+        padding-bottom:10px;
+        margin-left:auto;
+        margin-right:auto;
+        position: relative;
+        top: -14em;
+        opacity: 1;
+        }
+
+    #fleetthumbs {
+        padding:0;
+        margin-top:10px;
+        margin-left: 2px;
+        }
+    
+    #fleetimage {
+        width: 200px;
+        height: 73px;
+        border:0;
+        } 
+
+    #fleetthumbs img {
+        width: 48px;
+        height:15px;
+        border:0;
+        }
+
+    #fleetthumbs a {
+        display: block;
+        float: left;
+        width: 50px;
+        height:17px;
+        padding: 3px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        text-decoration: none;
+        }
+
+    #fleetthumbs a:hover {
+        background-color:gray;
+        }
+
+    #fleetthumbs a:active, #fleetthumbs a:focus {
+        background-color:gray;
+        }
+   
+    #horizontal_line.flygplan {
+        width: 80%;
+        height: 2px;
+        margin-top: -147px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        background: #000000;
+        overflow: hidden;
+        opacity: 1;
+        }
+   
+    /* Staff image gallery */
+    #staffimagecontainer.staff {
+        width:230px;        
+        height:258px;
+        border: 1px solid black;
+        background-color:silver;
+        text-align:center;
+        padding-top:20px;
+        padding-bottom:10px;
+        margin-left:auto;
+        margin-right:auto;
+        position: relative;
+        top: -24em;
+        opacity: 1;
+        }
+
+    #staffthumbs {
+        padding:0;
+        margin-top:10px;
+        margin-left: 40px;
+        }
+    
+    #staffimage {
+        width: 200px;
+        height: 187px;
+        border:0;
+        } 
+
+    #staffthumbs img {
+        width: 30px;
+        height:33px;
+        border:0;
+        }
+
+    #staffthumbs a {
+        display: block;
+        float: left;
+        width: 32px;
+        height:35px;
+        padding: 3px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        text-decoration: none;
+        }
+
+    #staffthumbs a:hover {
+        background-color:gray;
+        }
+
+    #staffthumbs a:active, #staffthumbs a:focus {
+        background-color:gray;
+        }
+   
+    #horizontal_line.staff {
+        width: 80%;
+        height: 2px;
+        margin-top: -290px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        background: #000000;
+        overflow: hidden;
+        opacity: 1;
         }
 }
 
 /* Width < 320px */
 @media screen and (min-width: 1px) and (max-width: 320px){
-    @viewport {
-        /*width: device-width;*/
-        width: 320px;
-        }
-        
     #mainlogo {
         width: 240px;
         height: 49px;
@@ -235,6 +573,6 @@
         }
         
     img {
-        max-width: 100%%;
+        max-width: 100%;
     }
 }
